--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "@rocketseat/esling-config/react"]
+  "extends": [
+    "next/core-web-vitals",
+    "@rocketseat/esling-config/react"
+  ]
 }
