--- a/spacetime_azfunction/package.json
+++ b/spacetime_azfunction/package.json
@@ -6,12 +6,15 @@
     "build": "tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
-    "start": "func start",
-    "test": "echo \"No tests yet...\""
+    "start": "func start"
   },
   "dependencies": {
     "@azure/functions": "^4.0.0-alpha.7",
     "@prisma/client": "^4.15.0",
+    "axios": "^1.4.0",
+    "azure-middleware": "^1.0.1",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
